2014-01-23  David Farler  <dfarler@apple.com>

        Make WebKitTestRunner work with iOS
        https://bugs.webkit.org/show_bug.cgi?id=127448

        Reviewed by Simon Fraser.

        Combined patch from Simon below with some additional xcconfig cleanups,
        rebasing and stubbing out a couple of new functions that popped up
        since then.

        2013-12-03  Simon Fraser  <simon.fraser@apple.com>

                <rdar://problem/15515469> Get WebKitTestRunner working on iOS

                Get WebKitTestRunner limping on iOS. Main parts:
                - Stub out lots of accessibility-related functions.
                - Stub out EventSender
                - Create target to make a bundled app that runs in the simulator,
                  and copy the injected bundle library into it.
                - Make a UIWindow and WKView to load tests in

                It runs, load tests, and dumps results to output. More work will be
                required once we can execute it via the webkitpy scripts.

        * WebKitTestRunner/Configurations/Base.xcconfig:
        * WebKitTestRunner/Configurations/InjectedBundle.xcconfig:
        * WebKitTestRunner/Configurations/WebKitTestRunner.xcconfig:
        * WebKitTestRunner/InjectedBundle/EventSendingController.cpp:
        * WebKitTestRunner/InjectedBundle/ios/AccessibilityControllerIOS.mm: Added.
        (WTR::AccessibilityController::addNotificationListener):
        (WTR::AccessibilityController::removeNotificationListener):
        (WTR::AccessibilityController::platformName):
        (WTR::AccessibilityController::logAccessibilityEvents):
        (WTR::AccessibilityController::resetToConsistentState):
        (WTR::findAccessibleObjectById):
        (WTR::AccessibilityController::accessibleElementById):
        * WebKitTestRunner/InjectedBundle/ios/AccessibilityNotificationHandler.h: Added.