@@ -3017,6 +3017,14 @@
             "molnarp"
          ]
       },
+      "Philip J\u00E4genstedt" : {
+         "emails" : [
+            "philipj@opera.com"
+         ],
+         "nicks" : [
+            "philipj"
+         ]
+      },
       "Radar WebKit Bug Importer" : {
          "emails" : [
             "webkit-bug-importer@group.apple.com"
